--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@iconify/react": "^6.0.2",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "embla-carousel-react": "^8.6.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
